docs/src/css/custom.css
/* ... */
.markdown h4 {
  font-size: var(--25px);
  line-height: var(--28px);
  font-weight: 500;
  letter-spacing: calc(var(--25px) * -0.04);
}

.markdown h5 {
  font-size: var(--20px);
  line-height: var(--24px);
  font-weight: 600;
  letter-spacing: calc(var(--20px) * -0.04);
}

/* Body 2 - per the style guide */
p {
  font-weight: 350;
  color: var(--clockworklabs-color-n3);
  letter-spacing: -1%;
  font-size: var(--16px);
  line-height: var(--24px);
}

/* Code 2 - per the style guide */
.tmp {
  font-family: var(--clockworklabs-font-source);
  font-weight: 400;
  font-size: var(--14px);
  line-height: var(--20px);
  letter-spacing: -5%;
}

pre code {
  background-color: var(--clockworklabs-code-background-color);
  color: var(--clockworklabs-code-color);
  border: 1px solid var(--clockworklabs-code-border-color);
}

p code {
  color: var(--clockworklabs-code-color);
  border: 1px solid var(--clockworklabs-code-border-color);
}

li code {
  color: var(--clockworklabs-code-color);
  border: 1px solid var(--clockworklabs-code-border-color);
}

strong {
  color: var(--clockworklabs-strong-color);
}

footer {
  display: none;
}

.tabs__item {
  border-bottom-width: 1px;
}

.navbar {
  background-color: var(--ifm-background-color);
  border-bottom: 1px solid var(--clockworklabs-navbar-border-color);
  color: var(--clockworklabs-color-n4);
  font-family: var(--clockworklabs-font-source);
  font-size: var(--14px);
  line-height: var(--16px);
  letter-spacing: calc(var(--14px) * 0.08);
  text-transform: uppercase;
  height: 64px;
  font-weight: 600;
}

.navbar__logo {
  height: 48px;
}

.navbar__button {
  background-color: var(--clockworklabs-color-shade2);
  border: 1px solid var(--clockworklabs-color-n6);
  color: var(--clockworklabs-color-white);
  width: 73px;
  text-align: center;
  padding: 10px !important;
  border-radius: 4px;
  font-size: var(--14px);
  letter-spacing: -0.28px;
  font-weight: 700;
  margin-left: 16px;
  &:hover {
    opacity: 0.8;
  }
}

.menu {
  padding: 0 !important;
}

ul.theme-doc-sidebar-menu {
  margin: var(--24px);

  .menu__link {
    padding: 0;
  }

  li {
    margin: 0;
    padding: 0;
    overflow: hidden;
    color: var(--clockworklabs-color-n1);
    text-overflow: ellipsis;

    /* Interactive/Menu */
    font-family: var(--clockworklabs-font-source);
    font-size: var(--14px);
    font-style: normal;
    font-weight: 700;
    line-height: var(--16px);
    letter-spacing: 1.12px;
    text-transform: uppercase;

    ul {
      margin: var(--8px) 0 var(--8px) 0;
      padding: 0;

      li {
        margin: 0;
        padding: 0;

        overflow: hidden;
        color: var(--clockworklabs-color-n1);
        text-overflow: ellipsis;
        text-transform: none;

        /* Code/Code 2 */
        font-family: var(--clockworklabs-font-source);
        font-size: var(--14px);
        font-style: normal;
        font-weight: 400;
        line-height: var(--20px);
        letter-spacing: -0.7px;

        a {
          padding: 8px !important;
        }

        .menu__link--active {
          border-radius: var(--8px);
          border: 1px solid var(--clockworklabs-color-n6);
          background: var(--clockworklabs-color-shade1) !important;
          color: var(--clockworklabs-color-n1) !important;
        }
      }

      a:hover {
        color: var(--clockworklabs-color-white) !important;
      }
    }
  }

  .menu__link--active {
    color: var(--clockworklabs-color-n3) !important;
  }
}

.menu__list-item:not(:first-child) {
  margin-top: 0 !important;
}

.menu__list .menu__list {
  padding: 0;
}

.footer {
  background-color: var(--ifm-background-color);
}

table {
  display: table;
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
  color: var(--clockworklabs-color-white);
  letter-spacing: -0.01em;
  margin-top: 40px;
  margin-bottom: 40px;
  font-size: 16px;
  line-height: 1.75;

  thead {
    color: var(--clockworklabs-strong-color);
    text-align: left;

    tr {
      border-bottom: none;
    }
  }

  tr {
    border-top: none;
  }

  td {
    border: 1px solid var(--clockworklabs-color-n6);
    padding: 0.5rem 0.75rem;

    code {
      background-color: var(--clockworklabs-code-background-color);
      color: var(--clockworklabs-code-color);
      border: 1px solid var(--clockworklabs-code-border-color);
    }
  }

  th {
    border: 1px solid var(--clockworklabs-color-n6);
    padding: 0.5rem 0.75rem;
  }
}

/* Make the page content left aligned */
.container {
  margin: 0 2rem 0;
}

@media screen and (max-width: 996px) {
  /* Make the page content full width on smaller screens */
  .container {
    margin: 0;
  }

  .DocSearch {
    width: inherit;
  }
}

